# sqlalchemy-kusto

./: .editorconfig  .env.sample  .gitignore  .prospector.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/PULL_REQUEST_TEMPLATE/: cosmetic.md  feature_request.md
.github/workflows/: codeql.yml  qa.yml
sqlalchemy_kusto/: __init__.py  base.py  dbapi.py  dbapi_connection.py  dbapi_cursor.py  dialect.py  dialect_base.py  dialect_kql.py  dialect_sql.py  errors.py  kusto_dbapi.py  requirements.py  utils.py
test/: __init__.py  conftest.py  dialect_tests.py  test_dialect.py  test_dialect_kql.py  test_dialect_sql.py  test_engine_sql.py  test_error_handling.py  test_suite.py
test/integration/: test_connection.py  test_dbapi.py  test_ddl.py  test_dialect_kql.py  test_dialect_sql.py  test_error_handling.py
test/unit/: test_dialect_kql.py
tests/: conftest.py
tests/integration/: conftest.py  test_dbapi.py  test_dialect_kql.py  test_dialect_sql.py  test_error_handling.py
tests/unit/: test_dialect_kql.py
