[build-system]
requires = [
    "setuptools>=42",
    "wheel>=0.37.1",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ["py38"]
include = ".pyi?$"
exclude = """
(
  /(
      .eggs         # exclude a few common directories in the
    | .git          # root of the project
    | .mypy_cache
    | .tox
    | .venv
    | build
    | dist
    | venv
  )/
)
"""

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
python_version = "3.8"
strict_optional = true
show_error_codes = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true

[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "consider-using-f-string",
    "missing-class-docstring",
    "missing-function-docstring",
    "missing-module-docstring",
    "no-self-use",
    "protected-access",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "too-many-public-methods",
    "unused-argument",
]
